# Tasks-manager

./: README.md
Task3_0/: CMakeLists.txt  Task - ярлык.exe.lnk  main.cpp
